--- a/src/Navbar/Navbar.css
+++ b/src/Navbar/Navbar.css
@@ -63,7 +63,31 @@ body {
     .toggle-button {
         display: flex;
     }
+
     .navbar-links {
         display: none;
+        width: 100%;
+    }
+
+    .navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .navbar-links ul {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .navbar-links {
+        text-align: center;
+    }
+
+    .navbar-links li a {
+        padding: .5rem 1rem;
+    }
+
+    .navbar-links.active {
+        display: flex;
     }
 }
